melior/src/dialect/llvm/snapshots/melior__dialect__llvm__tests__compile_alloca.snap
---
source: melior/src/dialect/llvm/mod.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: i64) {
    %0 = llvm.alloca %arg0 x i64 : (i64) -> !llvm.ptr
    llvm.return
  }
}
