melior/src/dialect/llvm/snapshots/melior__dialect__llvm__tests__compile_load.snap
---
source: melior/src/dialect/llvm/mod.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: !llvm.ptr) {
    %0 = llvm.load %arg0 : !llvm.ptr -> i64
    llvm.return
  }
}
