melior/src/dialect/llvm/snapshots/melior__dialect__llvm__tests__compile_zero.snap
---
source: melior/src/dialect/llvm/mod.rs
expression: module.as_operation()
---
module {
  llvm.func @foo() -> i64 {
    %0 = llvm.mlir.zero : i64
    llvm.return %0 : i64
  }
}
